# mux-rs

./: .gitignore  Cargo.toml  Makefile  README.md  scenarios.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml  release-xcframework.yml
agent-test-tui/: Cargo.toml
agent-test-tui/src/: main.rs
code-agent/: Cargo.toml
code-agent/src/: main.rs
docs/plans/: 2025-12-25-anthropic-client.md  2025-12-25-mux-rs-design.md  2025-12-25-mux-rs-implementation.md  2025-12-26-agent-test-tui-design.md  2025-12-26-agent-test-tui-implementation.md  2026-01-01-hooks-edit-resume-design.md  2026-01-01-llm-backends-design.md  2026-01-01-mux-ffi-full-feature-parity.md  2026-01-01-mux-ffi-implementation.md  2026-01-08-callback-llm-provider-design.md  2026-01-08-callback-llm-provider-implementation.md  2026-01-09-context-management-design.md  2026-01-09-context-management-implementation.md
mux-ffi/: Cargo.toml  build-android.sh  build-ios.sh  build-macos.sh  uniffi.toml
mux-ffi/src/: bridge.rs  callback.rs  callback_client.rs  context.rs  engine.rs  lib.rs  task_tool.rs  types.rs
mux-ffi/src/engine/: context_mgmt.rs  helpers.rs  mcp.rs  messaging.rs  mod.rs  persistence.rs  subagent.rs  tool_wrappers.rs  workspace.rs
site/: index.html
src/: error.rs  lib.rs  prelude.rs
src/agent/: async_handle.rs  definition.rs  filter.rs  mod.rs  presets.rs  runner.rs  task.rs  transcript.rs
src/coordinator/: coordinator.rs  coordinator_test.rs  mod.rs  rate_limiter.rs  rate_limiter_test.rs
src/hook/: mod.rs
src/llm/: anthropic.rs  anthropic_test.rs  client.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  stream_accumulator.rs  types.rs  types_test.rs
src/mcp/: client.rs  mod.rs  proxy.rs  transport.rs  types.rs  types_test.rs
src/mcp/transport/: http.rs  mod.rs  sse.rs  stdio.rs
src/permission/: handler.rs  mod.rs  policy.rs  policy_test.rs
src/tool/: mod.rs  registry.rs  registry_test.rs  result.rs  result_test.rs  traits.rs
src/tools/: bash.rs  edit.rs  list_files.rs  mod.rs  read_file.rs  search.rs  web_fetch.rs  web_search.rs  write_file.rs
tests/: integration.rs
