[workspace]
members = [".", "agent-test-tui"]
resolver = "2"

[package]
name = "mux"
version = "0.1.0"
edition = "2024"
description = "Agentic infrastructure for Rust"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
glob = "0.3"
async-stream = "0.3.6"

[dev-dependencies]
tokio-test = "0.4"
