# ABOUTME: Cargo manifest for mux-ffi UniFFI bindings crate.
# ABOUTME: Exposes mux Rust agentic library to Swift/Kotlin via UniFFI.

[package]
name = "mux-ffi"
version = "0.4.0"
edition = "2024"
description = "UniFFI bindings for mux"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "mux_ffi"

[dependencies]
mux = { path = ".." }
uniffi = { version = "0.30" }
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
anyhow = "1"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4"
